ex7/adder2Parser.py
# Generated from adder2.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class adder2Parser ( Parser ):

    grammarFileName = "adder2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "ADD", "AVE", "COMMA", "INTEGER", "FLOAT", 
                      "WS" ]

    RULE_commands = 0
    RULE_addCommand = 1
    RULE_aveCommand = 2
    RULE_float_list = 3
    RULE_rest_of_float_list = 4
    RULE_float_num = 5
    RULE_integer_list = 6
    RULE_integer = 7

    ruleNames =  [ "commands", "addCommand", "aveCommand", "float_list", 
                   "rest_of_float_list", "float_num", "integer_list", "integer" ]

    EOF = Token.EOF
    ADD=1
    AVE=2
    COMMA=3
    INTEGER=4
    FLOAT=5
    WS=6

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(adder2Parser.EOF, 0)

        def addCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(adder2Parser.AddCommandContext)
            else:
                return self.getTypedRuleContext(adder2Parser.AddCommandContext,i)


        def aveCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(adder2Parser.AveCommandContext)
            else:
                return self.getTypedRuleContext(adder2Parser.AveCommandContext,i)


        def getRuleIndex(self):
            return adder2Parser.RULE_commands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommands" ):
                listener.enterCommands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommands" ):
                listener.exitCommands(self)




    def commands(self):

        localctx = adder2Parser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_commands)
        self._la = 0 # Token type
        try:
            self.state = 30
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 16
                    self.addCommand()
                    self.state = 19 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==1):
                        break

                self.state = 21
                self.match(adder2Parser.EOF)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 24 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 23
                    self.aveCommand()
                    self.state = 26 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==2):
                        break

                self.state = 28
                self.match(adder2Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._integer_list = None # Integer_listContext

        def ADD(self):
            return self.getToken(adder2Parser.ADD, 0)

        def integer_list(self):
            return self.getTypedRuleContext(adder2Parser.Integer_listContext,0)


        def getRuleIndex(self):
            return adder2Parser.RULE_addCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddCommand" ):
                listener.enterAddCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddCommand" ):
                listener.exitAddCommand(self)




    def addCommand(self):

        localctx = adder2Parser.AddCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_addCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(adder2Parser.ADD)
            self.state = 33
            localctx._integer_list = self.integer_list()
            print("Sum: " + str(localctx._integer_list.list_value))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AveCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._float_list = None # Float_listContext

        def AVE(self):
            return self.getToken(adder2Parser.AVE, 0)

        def float_list(self):
            return self.getTypedRuleContext(adder2Parser.Float_listContext,0)


        def getRuleIndex(self):
            return adder2Parser.RULE_aveCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAveCommand" ):
                listener.enterAveCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAveCommand" ):
                listener.exitAveCommand(self)




    def aveCommand(self):

        localctx = adder2Parser.AveCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_aveCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(adder2Parser.AVE)
            self.state = 37
            localctx._float_list = self.float_list()
            print(localctx._float_list.list_)
            print("Average: " + str(sum(localctx._float_list.list_) / len(localctx._float_list.list_)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Float_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_ = None
            self._float_num = None # Float_numContext

        def float_num(self):
            return self.getTypedRuleContext(adder2Parser.Float_numContext,0)


        def COMMA(self):
            return self.getToken(adder2Parser.COMMA, 0)

        def rest_of_float_list(self):
            return self.getTypedRuleContext(adder2Parser.Rest_of_float_listContext,0)


        def getRuleIndex(self):
            return adder2Parser.RULE_float_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat_list" ):
                listener.enterFloat_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat_list" ):
                listener.exitFloat_list(self)




    def float_list(self):

        localctx = adder2Parser.Float_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_float_list)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                localctx._float_num = self.float_num()
                localctx.list_ = [localctx._float_num.value]
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                localctx._float_num = self.float_num()
                self.state = 45
                self.match(adder2Parser.COMMA)
                self.state = 46
                self.rest_of_float_list()
                localctx.list_.append(localctx._float_num.value)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rest_of_float_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_ = None

        def float_list(self):
            return self.getTypedRuleContext(adder2Parser.Float_listContext,0)


        def getRuleIndex(self):
            return adder2Parser.RULE_rest_of_float_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRest_of_float_list" ):
                listener.enterRest_of_float_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRest_of_float_list" ):
                listener.exitRest_of_float_list(self)




    def rest_of_float_list(self):

        localctx = adder2Parser.Rest_of_float_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rest_of_float_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.float_list()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Float_numContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self._FLOAT = None # Token

        def FLOAT(self):
            return self.getToken(adder2Parser.FLOAT, 0)

        def getRuleIndex(self):
            return adder2Parser.RULE_float_num

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat_num" ):
                listener.enterFloat_num(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat_num" ):
                listener.exitFloat_num(self)




    def float_num(self):

        localctx = adder2Parser.Float_numContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_float_num)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            localctx._FLOAT = self.match(adder2Parser.FLOAT)
            localctx.value = float((None if localctx._FLOAT is None else localctx._FLOAT.text))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integer_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.list_value = None
            self._integer = None # IntegerContext
            self._integer_list = None # Integer_listContext

        def integer(self):
            return self.getTypedRuleContext(adder2Parser.IntegerContext,0)


        def COMMA(self):
            return self.getToken(adder2Parser.COMMA, 0)

        def integer_list(self):
            return self.getTypedRuleContext(adder2Parser.Integer_listContext,0)


        def getRuleIndex(self):
            return adder2Parser.RULE_integer_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_list" ):
                listener.enterInteger_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_list" ):
                listener.exitInteger_list(self)




    def integer_list(self):

        localctx = adder2Parser.Integer_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_integer_list)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                localctx._integer = self.integer()
                localctx.list_value = localctx._integer.value
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                localctx._integer = self.integer()
                self.state = 61
                self.match(adder2Parser.COMMA)
                self.state = 62
                localctx._integer_list = self.integer_list()
                localctx.list_value = localctx._integer.value + localctx._integer_list.list_value
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self._INTEGER = None # Token

        def INTEGER(self):
            return self.getToken(adder2Parser.INTEGER, 0)

        def getRuleIndex(self):
            return adder2Parser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)




    def integer(self):

        localctx = adder2Parser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_integer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            localctx._INTEGER = self.match(adder2Parser.INTEGER)
            localctx.value = int((None if localctx._INTEGER is None else localctx._INTEGER.text))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





